--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "path": "^0.12.7",
+    "razorpay": "^2.9.4",
     "sharp": "^0.33.3",
     "uuid": "^9.0.1"
   }
