--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "middleware": "^1.0.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "multer": "^1.4.5-lts.1",
@@ -25,6 +26,8 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "path": "^0.12.7",
+    "pdfkit": "^0.15.0",
+    "pdfkit-table": "^0.1.99",
     "razorpay": "^2.9.4",
     "sharp": "^0.33.3",
     "uuid": "^9.0.1"
