--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "nocache": "^4.0.0",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "pdfkit": "^0.15.0",
     "pdfkit-table": "^0.1.99",
